# gtest_230918

./: .gitignore  10_테스트전용하위클래스.cpp  10_테스트전용하위클래스2.cpp  11_파라미터화테스트.cpp  11_파라미터화테스트2.cpp  11_파라미터화테스트3.cpp  11_파라미터화테스트4.cpp  11_파라미터화테스트5.cpp  12_테스트리스너.cpp  13_테스트대역.cpp  13_테스트대역2.cpp  14_stub.cpp  15_Fake.cpp  16_Spy.cpp  17_Mock.cpp  18_Mocking.cpp  18_Mocking2.cpp  18_Mocking3.cpp  18_Mocking4.cpp  18_Mocking5.cpp  18_Mocking6.cpp  19_Mock종류.cpp  1_시작.cpp  20_Delegating.cpp  21_행위기반검증.cpp  21_행위기반검증2.cpp  2_3A.cpp  3_테스트픽스쳐.cpp  3_테스트픽스쳐2.cpp  3_테스트픽스쳐3.cpp  3_테스트픽스쳐4.cpp  4_스위트픽스쳐.cpp  5_전역픽스쳐.cpp  6_Assertion.cpp  7_GoogleTest.cpp  8_비기능테스트.cpp  8_비기능테스트2.cpp  8_비기능테스트3.cpp  9_FriendTest.cpp  README.md  (+7 more)
dev/: setup_bulidenv.bat
dev/include/: calc.h
dev/src/: calc.cpp  ~CMakeLists.txt
doc/: README.md
doc/unittest_coverage/: README.md  code_coverage.md  googletest_study.md  gtest_with_submodule.md
googletest/googletest/include/gtest/: gtest.h
test/: build.bat  build.sh  check_code_coverage.sh  codecoverage_readme.md  googletest_readme.md  readme.md  reference_CMakeList.txt  run.bat  run.sh  setup_bulidenv.bat  setup_bulidenv.sh
test/test_calc/: CMakeLists.txt  calc_test.cpp  ~CMakeLists.txt
